Add Tick Marks Version 2

--- a/Notebooks/Tick_Marks_2_Demo.ipynb
+++ b/Notebooks/Tick_Marks_2_Demo.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9fab45dd-66d9-4b16-8c68-e9d590260757",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "20b612a1-7c1f-49d6-855d-797f9f7fef1b",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "cdc919f7-4a0b-4420-af0e-15076d983041",
    "metadata": {},
    "outputs": [
@@ -100,12 +100,13 @@
     "\n",
     "num_major_ticks = 10\n",
     "num_minor_ticks = 3\n",
-    "skip_major_pos= True\n",
+    "minor_skip_major_angle= True\n",
     "\n",
     "start_inner_radius = 5\n",
     "stop_inner_radius = 5\n",
     "start_outer_radius = 7\n",
     "stop_outer_radius = 10\n",
+    "fullrange_Minor_Ticks = True\n",
     "\n",
     "major_tick_marks = calc_major_tick_marks(start_inner_radius = start_inner_radius,\n",
     "                                         stop_inner_radius = stop_inner_radius,\n",
@@ -119,16 +120,30 @@
     "stop_inner_minor_radius = 5\n",
     "start_outer_minor_radius = 6\n",
     "stop_outer_minor_radius = 9\n",
-    "minor_tick_marks = calc_fullrange_minor_tick_makrs(start_inner_radius = start_inner_minor_radius,\n",
-    "                                                  stop_inner_radius = stop_inner_minor_radius,\n",
-    "                                                  start_outer_radius=start_outer_minor_radius,\n",
-    "                                                  stop_outer_radius=stop_outer_minor_radius,\n",
-    "                                                  start_angle= start_angle,\n",
-    "                                                  stop_angle=stop_angle,\n",
-    "                                                  num_major_ticks=num_major_ticks,\n",
-    "                                                  num_minor_ticks=num_minor_ticks,\n",
-    "                                                  skip_major_pos=skip_major_pos\n",
-    "                                                  )\n",
+    "\n",
+    "if fullrange_Minor_Ticks:\n",
+    "    \n",
+    "    minor_tick_marks = calc_fullrange_minor_tick_marks(start_inner_radius = start_inner_minor_radius,\n",
+    "                                                      stop_inner_radius = stop_inner_minor_radius,\n",
+    "                                                      start_outer_radius=start_outer_minor_radius,\n",
+    "                                                      stop_outer_radius=stop_outer_minor_radius,\n",
+    "                                                      start_angle= start_angle,\n",
+    "                                                      stop_angle=stop_angle,\n",
+    "                                                      num_major_ticks=num_major_ticks,\n",
+    "                                                      num_minor_ticks=num_minor_ticks,\n",
+    "                                                      skip_major_pos=minor_skip_major_angle\n",
+    "                                                      )\n",
+    "else:\n",
+    "    minor_tick_marks = calc_sep_minor_tick_marks(start_inner_radius = start_inner_minor_radius,\n",
+    "                                             stop_inner_radius = stop_inner_minor_radius,\n",
+    "                                             start_outer_radius=start_outer_minor_radius,\n",
+    "                                             stop_outer_radius=stop_outer_minor_radius,\n",
+    "                                             start_angle= start_angle,\n",
+    "                                             stop_angle=stop_angle,\n",
+    "                                             num_major_ticks=num_major_ticks,\n",
+    "                                             num_minor_ticks=num_minor_ticks,\n",
+    "                                             skip_major_pos=minor_skip_major_angle\n",
+    "                                             )\n",
     "# print(len(minor_tick_marks), len(major_tick_marks))\n",
     "plot_line_arrays([minor_tick_marks, major_tick_marks], show_data=False)\n"
    ]
